fix position lock on iOS

--- a/lock/lock.css
+++ b/lock/lock.css
@@ -90,6 +90,7 @@
     top: 9vmin;
     height: 45%;
     width: 5vmax;
+    text-align: center;
     position: relative;
     font-size: 12vmin;
     font-weight: bold;
